--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,44 @@
     <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Grand Travel</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+      /* Custom CSS to move Tawk.to widget to the bottom left corner */
+      #tawkchat-container {
+        left: 20px !important;
+        right: auto !important;
+      }
+
+      /* Responsive styles */
+      @media (max-width: 768px) {
+        #tawkchat-container {
+          left: 15px !important;
+          bottom: 15px !important;
+        }
+      }
+
+      @media (max-width: 480px) {
+        #tawkchat-container {
+          left: 10px !important;
+          bottom: 10px !important;
+        }
+      }
+    </style>
   </head>
   <body>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/670fd05c2480f5b4f58e6573/1iaasbr60';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
